# human2robot-manipulability-domain-adaptation

./: .gitignore  CMakeLists.txt  main.cpp  map_dataset.sh  map_dataset_cv.sh  map_dataset_rhuman_panda.sh  package.xml
include/: BimanualSystem.h  Franka.h  GMM.h  GMM_SPD.h  ManipulabilityControl.h  Mapping_utils.h  SPD.h  SPD_Utils.h  control.h  learn.h  utils.h
matlab/: Robots2D.m  analysis.m  calibrationHumanArm.m  collectAndNormalizeHumanArm.m  controlRHuman.m  controlUnitSpheres.m  cpd8d.m  createLookupTable.asv  createLookupTable.m  data_preparation_rhuman_luis_t_manips.m  distanceLogEuclidean.m  distanceRiemann.m  generateHumanData.m  generateRobotDataFanuc.m  generateRobotDataPUMA560.m  generateRobotDataToy.m  geomJ.m  get_data_statistics.m  interpolation.m  interpolationAtPoint.m  logmap.m  map_manipulabilities.asv  map_manipulabilities.m  map_manipulabilities_cv.m  normalize_manipulability.m  plotInterpolation.asv  plotInterpolation.m  prepare_data.m  scaleEllipsoidVolume.m  transp_operator.m
matlab/@rHuManModel/: build_humanOpenSimKinematics.m  checkSelfCollision.m  getFKM.m  getIK.m  getJacobGeom.m  getOrientation.m  getPos.m  getRandGaussianJoints.m  getRandJoints.m  getSelfCollisionGains.m  getSelfCollisionPenalties.m  mustBeA.m  printv.m  rHuManModel.m
matlab/cooperative_dual_task_space/: FEpVrepRobot1.m  FEpVrepRobot2.m  boolFunc.m  boolFunctilt.m  buildGeomJacob.m  closeGripper.m  comp_dist.m  cooperative_manipulability_control.m  fep_cooperative_dynamic.m  fep_cooperative_dynamic_v1.m  fep_cooperative_matlab.m  fep_cooperative_matlab_manip.m  fep_cooperative_matlab_old.m  getFrankaKinematics.m  get_gripper_handles.m  get_joint_handles.m  simulation_base.ttt  simulation_base2.ttt
matlab/dqrobotics-matlab/@DQ/: is_unit.m  mldivide.m
matlab/dqrobotics-matlab/interfaces/vrep/: DQ_VrepInterface.m
matlab/dqrobotics-matlab/utils/: include_namespace_dq.m
matlab/extra/: fctModel_Rave2Sim.m  fctModel_Sim2Rave.m  loadOpenRaveKinematics.m  vec3.m  vec6.m
matlab/extra/dqrobotics-code/: Instructions_for_download.txt
matlab/extra/dqrobotics-code/C/DQ/: dq.c  dq.h  operand.c  operand.h
matlab/extra/dqrobotics-code/C/examples/: KUKA.h  viper.h
matlab/extra/dqrobotics-code/C/kinematics/: kinematics.h
matlab/extra/dqrobotics-code/matlab/@DQ/: exp.m  norm.m  plot.m
matlab/extra/dqrobotics-code/matlab/@DQ_cdts/: DQ_cdts.m
matlab/extra/dqrobotics-code/matlab/@DQ_kinematics/: DQ_kinematics.m  plot.m  plot_dqkine.m  plot_rt.m
py/: SPDMetrics.py  accumulateData.py  analysis.py  combinedata.py  cv_evaluate.py  cv_indices.py  data_preparation_bimanual.py  data_preparation_panda.py  data_preparation_rhuman_luis.py  franka_robot.py  gca.py  generate_artificial_data.py  generate_artificial_data_r_s_t.py  generate_from_tumtuda.py  get_cov_ellipsoid.py  get_dispersion.py  get_rotation_matrix.py  path_sing2sing.py  plot.py  plotAll3d.py  plotAll3dHumanArm.py  plotCone.m  plotGMM.py  plotGMM3d.py  plotTime3d.py  plot_2d_embeddings.py  plot_GMM.py  plot_GMM_3d.py  plot_all_3d.py  plot_all_3d_human_arm.py  plot_all_3d_rhuman_model.py  plot_artificial_data.py  plot_calibration_process.py  plot_interpolation.py  plot_time_3d.py  plot_time_3d_rhuman_model.py  prepare_data.py  run_icp.py  run_icp2.py  run_icp_2d.py  (+4 more)
py/rpa/helpers/transfer_learning/: manopt.py
py/vrep/: franka_record_trajectories.py
src/: BimanualSystem.cpp  Franka.cpp  GMM.cpp  GMM_SPD.cpp  ManipulabilityControl.cpp  SPD.cpp  calibrationProcess.cpp  control.cpp  learn.cpp  main.cpp
tests/: main.cpp  tests.cpp
vrep_scenes/: franka_collect_data.ttt  franka_interaction_sphere.ttt  franka_kinematic.ttt  franka_rotate_demos_2.ttt  franka_trace_paths_play.ttt  readme.txt
